feat: ajout des variables issues des applications-xxx.properties pour pouvoir les surcharger depuis le .env

--- a/.env-dist
+++ b/.env-dist
@@ -8,6 +8,7 @@
 # Config du front
 # LN_FRONT_VUE_APP_RECAPTCHA_KEY_SITE: c'est un token qui permet de
 # faire fonctionner le système de captcha de licencenationales
+# (doit avoir la même valeur que LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SITE)
 # LN_FRONT_VUE_APP_ROOT_API: c'est l'URL publique de la racine de l'API du back
 # que voit l'utilisateur dans son navigateur web. L'URL est différente
 # en fonction de si on interroge un back en dev,test, ou prod.
@@ -20,6 +21,15 @@ LN_FRONT_VUE_APP_RECAPTCHA_KEY_SITE=6LcjHroaAAAAAOhO6sd_1ooz5LfcyRPoYirqxsFt
 # Config commune modules back et web pour basculer
 # spring en dev, test, ou prod
 LN_SPRING_PROFILES_ACTIVE=dev
+LN_SPRING_SITE_URL=https://acces-dev.licencesnationales.fr
+LN_SPRING_DEST_NOTIF_ADMIN=changeme@abes.fr
+LN_SPRING_MAIL_WS_URL=https://apicom-dev.sudoc.fr/wsmail
+LN_SPRING_DATASOURCE_USERNAME=changeme
+LN_SPRING_DATASOURCE_PASSWORD=changemesecret
+LN_SPRING_JWT_TOKEN_SECRET=changemesecret
+LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SITE=6LcjHroaAAAAAOhO6sd_1ooz5LfcyRPoYirqxsFt
+LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SECRET=changemesecret
+LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_THRESHOLD=0.7
 
 
 # Config du back (web/api)
