--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,16 @@ services:
     container_name: licencesnationales-web
     restart: unless-stopped
     environment:
-      - SPRING_PROFILES_ACTIVE=${LN_SPRING_PROFILES_ACTIVE}
-      # ... TODO ajouter les var
+      SPRING_PROFILES_ACTIVE: ${LN_SPRING_PROFILES_ACTIVE}
+      SITE_URL: ${LN_SPRING_SITE_URL}
+      LN_DEST_NOTIF_ADMIN: ${LN_SPRING_DEST_NOTIF_ADMIN}
+      MAIL_WS_URL: ${LN_SPRING_MAIL_WS_URL}
+      SPRING_DATASOURCE_USERNAME: ${LN_SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${LN_SPRING_DATASOURCE_PASSWORD}
+      JWT_TOKEN_SECRET: ${LN_SPRING_JWT_TOKEN_SECRET}
+      GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SITE: ${LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SITE}
+      GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SECRET: ${LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SECRET}
+      GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_THRESHOLD: ${LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_THRESHOLD}
     ports:
       - ${LN_WEB_HTTP_PORT}:8080
     labels:
@@ -52,9 +60,18 @@ services:
     container_name: licencesnationales-batch
     restart: unless-stopped
     environment:
-      - SPRING_PROFILES_ACTIVE=${LN_SPRING_PROFILES_ACTIVE}
-      - LN_BATCH_AT_STARTUP=${LN_BATCH_AT_STARTUP}
-      - LN_BATCH_CRON=${LN_BATCH_CRON}
+      LN_BATCH_AT_STARTUP: ${LN_BATCH_AT_STARTUP}
+      LN_BATCH_CRON: ${LN_BATCH_CRON}
+      SPRING_PROFILES_ACTIVE: ${LN_SPRING_PROFILES_ACTIVE}
+      SITE_URL: ${LN_SPRING_SITE_URL}
+      LN_DEST_NOTIF_ADMIN: ${LN_SPRING_DEST_NOTIF_ADMIN}
+      MAIL_WS_URL: ${LN_SPRING_MAIL_WS_URL}
+      SPRING_DATASOURCE_USERNAME: ${LN_SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${LN_SPRING_DATASOURCE_PASSWORD}
+      JWT_TOKEN_SECRET: ${LN_SPRING_JWT_TOKEN_SECRET}
+      GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SITE: ${LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SITE}
+      GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SECRET: ${LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SECRET}
+      GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_THRESHOLD: ${LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_THRESHOLD}
     labels:
       # pour envoyer les logs dans le puits de log de l'abes
       - "co.elastic.logs/enabled=true"
