--- a/.env-dist
+++ b/.env-dist
@@ -43,5 +43,18 @@ LN_BATCH_AT_STARTUP=1
 LN_BATCH_CRON=0 0 * * 0
 
 
-# Config watchtower
+
+######################################################
+# Paramétrage de licencesnationales-watchtower
+######################################################
+# Pour les notifications slack des déploiements continus de licencesnationales
+# cf https://containrrr.dev/watchtower/notifications/#slack
+# A noter : penser à indiquer le nom de l'environnement dev, test, prod
+# au niveau de la variable WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER pour pouvoir
+# mieux distinguer sur quel machine a été réalisé le déploiement
+# - en local laisser LN_WATCHTOWER_RUN_ONCE=true
+# - en dev, test, prod, positionner LN_WATCHTOWER_RUN_ONCE=false
+LN_WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=https://hooks.slack.com/services/xxx/yyyyyyyyyyyyyyy
+LN_WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER=Déploiement de https://acces-dev.licencesnationales.fr
 LN_WATCHTOWER_RUN_ONCE=true
+
