feat: ajout de la variable LN_SPRING_DATASOURCE_URL et réorganisation du .env-dist

--- a/.env-dist
+++ b/.env-dist
@@ -5,7 +5,9 @@
 #   avant de démarrer l'application avec docker-compose up
 #
 
-# Config du front
+######################################################
+# Paramétrage de licencesnationales-front
+######################################################
 # LN_FRONT_VUE_APP_RECAPTCHA_KEY_SITE: c'est un token qui permet de
 # faire fonctionner le système de captcha de licencenationales
 # (doit avoir la même valeur que LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SITE)
@@ -18,29 +20,38 @@ LN_FRONT_VUE_APP_ROOT_API=https://acces-dev.licencesnationales.fr/v1/
 LN_FRONT_VUE_APP_RECAPTCHA_KEY_SITE=6LcjHroaAAAAAOhO6sd_1ooz5LfcyRPoYirqxsFt
 
 
+######################################################
+# Paramétrage de licencesnationales-web
+######################################################
+LN_WEB_VERSION=develop-web
+LN_WEB_HTTP_PORT=10400
+
+
+######################################################
+# Paramétrage de licencesnationales-batch
+######################################################
+LN_BATCH_VERSION=develop-batch
+LN_BATCH_AT_STARTUP=1
+LN_BATCH_CRON=0 0 * * 0
+
+
+######################################################
+# Paramétrage commun à
+# licencesnationales-web et licencesnationales-batch
+######################################################
 # Config commune modules back et web pour basculer
 # spring en dev, test, ou prod
 LN_SPRING_PROFILES_ACTIVE=dev
 LN_SPRING_SITE_URL=https://acces-dev.licencesnationales.fr
 LN_SPRING_DEST_NOTIF_ADMIN=changeme@abes.fr
 LN_SPRING_MAIL_WS_URL=https://apicom-dev.sudoc.fr/wsmail
+LN_SPRING_DATASOURCE_URL=jdbc:oracle:thin:@//orpins-d-scan.v110.abes.fr:1521/Abes
 LN_SPRING_DATASOURCE_USERNAME=changeme
 LN_SPRING_DATASOURCE_PASSWORD=changemesecret
 LN_SPRING_JWT_TOKEN_SECRET=changemesecret
 LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SITE=6LcjHroaAAAAAOhO6sd_1ooz5LfcyRPoYirqxsFt
 LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SECRET=changemesecret
 LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_THRESHOLD=0.7
-
-
-# Config du back (web/api)
-LN_WEB_VERSION=develop-web
-LN_WEB_HTTP_PORT=10400
-
-
-# Config des batchs
-LN_BATCH_VERSION=develop-batch
-LN_BATCH_AT_STARTUP=1
-LN_BATCH_CRON=0 0 * * 0
 
 
 
