--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       SITE_URL: ${LN_SPRING_SITE_URL}
       LN_DEST_NOTIF_ADMIN: ${LN_SPRING_DEST_NOTIF_ADMIN}
       MAIL_WS_URL: ${LN_SPRING_MAIL_WS_URL}
+      SPRING_DATASOURCE_URL: ${LN_SPRING_DATASOURCE_URL}
       SPRING_DATASOURCE_USERNAME: ${LN_SPRING_DATASOURCE_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${LN_SPRING_DATASOURCE_PASSWORD}
       JWT_TOKEN_SECRET: ${LN_SPRING_JWT_TOKEN_SECRET}
@@ -66,6 +67,7 @@ services:
       SITE_URL: ${LN_SPRING_SITE_URL}
       LN_DEST_NOTIF_ADMIN: ${LN_SPRING_DEST_NOTIF_ADMIN}
       MAIL_WS_URL: ${LN_SPRING_MAIL_WS_URL}
+      SPRING_DATASOURCE_URL: ${LN_SPRING_DATASOURCE_URL}
       SPRING_DATASOURCE_USERNAME: ${LN_SPRING_DATASOURCE_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${LN_SPRING_DATASOURCE_PASSWORD}
       JWT_TOKEN_SECRET: ${LN_SPRING_JWT_TOKEN_SECRET}
