--- a/.env-dist
+++ b/.env-dist
@@ -31,8 +31,8 @@ LN_WEB_HTTP_PORT=10400
 # Paramétrage de licencesnationales-batch
 ######################################################
 LN_BATCH_VERSION=develop-batch
-LN_BATCH_AT_STARTUP=1
-LN_BATCH_CRON=0 0 * * 0
+LN_BATCH_AT_STARTUP=0
+LN_BATCH_CRON=0 0 1 * *
 
 
 ######################################################
