--- a/.env-dist
+++ b/.env-dist
@@ -33,6 +33,10 @@ LN_WEB_HTTP_PORT=10400
 LN_BATCH_VERSION=develop-batch
 LN_BATCH_AT_STARTUP=0
 LN_BATCH_CRON=0 0 1 * *
+LN_SPRING_BATCH_JOB_ENABLED=false
+LN_APPLICATION_NAME=batch
+LN_APPLICATION_BASEDIR=./target/
+
 
 
 ######################################################
@@ -52,7 +56,15 @@ LN_SPRING_JWT_TOKEN_SECRET=changemesecret
 LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SITE=6LcjHroaAAAAAOhO6sd_1ooz5LfcyRPoYirqxsFt
 LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_SECRET=changemesecret
 LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_THRESHOLD=0.7
-
+LN_SPRING_DATASOURCE_DRIVER=oracle.jdbc.OracleDriver
+LN_SPRING_DATASOURCE_DIALECT=org.hibernate.dialect.Oracle12cDialect
+LN_SPRING_HIBERNATE_DDL_AUTO=none
+LN_SPRING_DATASOURCE_INITIALIZATION=never
+LN_LOG_CONFIG=classpath:log4j2-prod.xml
+LN_LOG_LEVEL_ROOT=INFO
+LN_SPRING_SQL_INIT=never
+LN_SPRING_MAIN_BANNER=off
+LN_APPLICATION_VERSION=numero_version
 
 
 ######################################################
