feature : ajout du mem_limit réglé sur 5go

--- a/.env-dist
+++ b/.env-dist
@@ -5,6 +5,12 @@
 #   avant de démarrer l'application avec docker-compose up
 #
 
+
+######################################################
+# Memory caping for containers : 5Gio = 5368709120 bytes
+MEM_LIMIT=5g
+
+
 ######################################################
 # Paramétrage de licencesnationales-front
 ######################################################
