--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
       GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_THRESHOLD: ${LN_SPRING_GOOGLE_FR_ABES_LICENCESNATIONALES_RECAPTCHA_KEY_THRESHOLD}
       LOGGING_CONFIG: ${LN_LOG_CONFIG}
       LOGGING_LEVEL_ROOT: ${LN_LOG_LEVEL_ROOT}
+      SIREN_TOKEN: ${LN_SIREN_TOKEN}
     ports:
       - ${LN_WEB_HTTP_PORT}:8080
     labels:
