--- a/.env-dist
+++ b/.env-dist
@@ -31,6 +31,7 @@ LN_FRONT_VUE_APP_RECAPTCHA_KEY_SITE=6LcjHroaAAAAAOhO6sd_1ooz5LfcyRPoYirqxsFt
 ######################################################
 LN_WEB_VERSION=develop-web
 LN_WEB_HTTP_PORT=10400
+LN_SIREN_TOKEN=montoken
 
 
 ######################################################
