--- a/.env-dist
+++ b/.env-dist
@@ -7,8 +7,9 @@
 
 
 ######################################################
-# Memory caping for containers : 5Gio = 5368709120 bytes
+# Caping for containers
 MEM_LIMIT=5g
+CPU_LIMIT=0.5
 
 
 ######################################################
