--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     container_name: licencesnationales-front
     restart: unless-stopped
     mem_limit: ${MEM_LIMIT}
+    memswap_limit: ${MEM_LIMIT}
+    cpus: ${CPU_LIMIT}
     environment:
       - LN_VUE_APP_ROOT_API=${LN_FRONT_VUE_APP_ROOT_API}
       - LN_VUE_APP_RECAPTCHA_KEY_SITE=${LN_FRONT_VUE_APP_RECAPTCHA_KEY_SITE}
@@ -38,6 +40,8 @@ services:
     container_name: licencesnationales-web
     restart: unless-stopped
     mem_limit: ${MEM_LIMIT}
+    memswap_limit: ${MEM_LIMIT}
+    cpus: ${CPU_LIMIT}
     environment:
       SPRING_PROFILES_ACTIVE: ${LN_SPRING_PROFILES_ACTIVE}
       SITE_URL: ${LN_SPRING_SITE_URL}
@@ -77,6 +81,8 @@ services:
     container_name: licencesnationales-batch
     restart: unless-stopped
     mem_limit: ${MEM_LIMIT}
+    memswap_limit: ${MEM_LIMIT}
+    cpus: ${CPU_LIMIT}
     environment:
       LN_BATCH_AT_STARTUP: ${LN_BATCH_AT_STARTUP}
       LN_BATCH_CRON: ${LN_BATCH_CRON}
@@ -124,6 +130,8 @@ services:
     container_name: licencesnationales-watchtower
     restart: unless-stopped
     mem_limit: ${MEM_LIMIT}
+    memswap_limit: ${MEM_LIMIT}
+    cpus: ${CPU_LIMIT}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
